--- a/Menu.html
+++ b/Menu.html
@@ -58,7 +58,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Rustic Restaurant</p>
+        <p>&copy; 2025 SliceN'Bites</p>
     </footer>
 
 </body>
